--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   auto_size_text: ^2.0.2
   intl_phone_number_input: ^0.6.0
   http: ^0.12.1
+  flutter_polyline_points: ^0.2.4
 
 dev_dependencies:
   flutter_test:
