--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -27,23 +27,25 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
-  geolocator: ^6.1.1
-  firebase_core: ^0.7.0
-  firebase_auth: ^0.20.1
-  cloud_firestore: ^0.16.0+1
-  google_sign_in: ^4.4.4
-  provider: ^4.3.3
-  rflutter_alert: ^1.0.3
-  easy_loader: ^1.0.3
+  cupertino_icons: ^1.0.3 
+  geolocator: ^7.0.3
+  firebase_auth: ^1.2.0
+  firebase_core: ^1.2.1
+  cloud_firestore: ^2.2.1  
+  google_sign_in: ^5.0.4 
+  provider: ^5.0.0
+  rflutter_alert: ^2.0.2 
   google_maps_flutter: ^2.0.3
-  auto_size_text: ^2.0.2
-  intl_phone_number_input: ^0.6.0
-  http: ^0.12.1
-  flutter_polyline_points: ^0.2.4
+  auto_size_text: ^3.0.0-nullsafety.0  
+  intl_phone_number_input: ^0.7.0+2   
+  http: ^0.13.3 
+  flutter_polyline_points: ^1.0.0
   font_awesome_flutter: ^9.0.0
   animated_text_kit: ^4.2.1
-  firebase_database: ^6.0.0
+  firebase_database: ^7.1.0
+  plugin_platform_interface: ^2.0.0
+  geolocator_platform_interface: ^2.0.2
+  flutter_geofire: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +69,7 @@ flutter:
     - assets/flag-wave-250.png
     - assets/taxi.jpg
     - assets/user_profile.png
+    - assets/taxi_logo.png
 
   fonts:
   - family: Signatra
